Fixed spacing between text and button in services offered. Also, made the text bg inherit.

--- a/public/assets/css/tkgreen/main.css
+++ b/public/assets/css/tkgreen/main.css
@@ -992,6 +992,8 @@ a:hover, a:focus {
 }
 .imageElement .element__content {
   margin-block-start: 1em;
+  margin-block-end: 1em;
+  background-color: inherit;
 }
 
 .cards {
