--- a/structure/sass/tkgreen/elements/_image.scss
+++ b/structure/sass/tkgreen/elements/_image.scss
@@ -22,5 +22,7 @@
 
   .element__content {
    margin-block-start: $spacer;
+   margin-block-end: $spacer;
+   background-color: inherit;
   }
  }
